[package]
name = "rust-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.8"
