[package]
name = "rdsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
protobuf = "3.2.0"
protobuf-codegen = "3.2.0"
protoc-bin-vendored = "3.0.0"
simd-json = "0.13.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8.8"
chrono = "0.4.31"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]